DevOpsTechnologies/Kubernetes/fullapp/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: myingress
  labels:
    name: myingress

spec:
  rules:
  - host: arielvis-ingress.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-express-service
            port: 
              number: 8081
